# rdns

./: .gitignore  Cargo.toml  README.md
src/: dns.rs  interface.rs  main.rs
src/dns/: interface.rs
src/interface/: linux.rs  windows.rs
