[package]
name = "rdns"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = "4.5.0", features = ["derive"]}
directories = "5.0.1"
runas = "1.1.0"
serde_json = "1.0.113"
serde = { version = "1.0.196", features = ["derive"] }
